fixed: responsiveness and spacing

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -61,20 +61,20 @@ header {
 
   .searchTask {
     input[type="search"] {
-      border: 0px;
       border-radius: 8px 0px 0px 8px;
-      width: 17.25rem;
+      border: 0px;
       height: 34px;
       padding-left: 15px;
+      width: 17.25rem;
     }
     button {
       background-color: $button-main-color;
-      border: 0px;
       border-radius: 8px;
+      border: 0px;
       color: $third-text-color;
       cursor: pointer;
-      font: 14px 'Open Sans', sans-serif;
       font-weight: 700;
+      font: 14px 'Open Sans', sans-serif;
       height: 36px;
       margin-left: -34px;
       width: 69px;
@@ -82,52 +82,52 @@ header {
   }
 
   .filterTask {
-    display: flex;
     align-items: center;
+    display: flex;
 
     label {
-      font: 14px "Open Sans", sans-serif;
-      font-weight: 600;
       color: $third-text-color;
+      font-weight: 600;
+      font: 14px "Open Sans", sans-serif;
       margin-right: 18px;
     }
     .select {
       align-items: center;
-      display: grid;
-      width: 193px;
-      height: 34px;
-      border-radius: 8px;
-      padding-left: 25px;
-      padding-right: 12px;
-      font: 14px "Open Sans", sans-serif;
-      cursor: pointer;
       background-color: #fff;
       background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
+      border-radius: 8px;
+      cursor: pointer;
+      display: grid;
+      font: 14px "Open Sans", sans-serif;
       grid-template-areas: "select";
+      height: 34px;
+      padding-left: 25px;
+      padding-right: 12px;
+      width: 193px;
 
       &::after {
-        content: "";
-        width: 1rem;
-        height: 0.625rem;
         background-color: $secondary-text-color;
         clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+        content: "";
         grid-area: select;
+        height: 0.625rem;
         justify-self: end;
+        width: 1rem;
       }
 
       #filter {
         appearance: none;
         background-color: transparent;
         border: none;
-        padding: 0 1em 0 0;
-        margin: 0;
-        width: 100%;
+        cursor: inherit;
         font-family: inherit;
         font-size: inherit;
-        cursor: inherit;
-        line-height: inherit;
-        outline: none;
         grid-area: select;
+        line-height: inherit;
+        margin: 0;
+        outline: none;
+        padding: 0 1em 0 0;
+        width: 100%;
 
         #filter::-ms-expand {
           display: none;
@@ -149,16 +149,16 @@ header {
   width: 100%;
 
   .taskCard {
+    border-radius: 14px;
+    border: 1px solid $main-text-color;
     display: flex;
     flex-direction: column;
-    border: 1px solid $main-text-color;
-    border-radius: 14px;
     max-height: 360px;
     overflow: hidden;
-    width: 253px;
     padding: 13px;
-    transition: ease-in-out 1s;
     position: relative;
+    transition: ease-in-out 1s;
+    width: 253px;
 
     &:hover {
       max-height: 466px;
@@ -167,28 +167,28 @@ header {
       background: $main-color;
       border-radius: 0px 8px 8px 0px;
       color: $third-text-color;
-      font: 12px "Open Sans", sans-serif;
       font-weight: 700;
-      width: 102px;
-      text-align: center;
+      font: 12px "Open Sans", sans-serif;
+      left: -10px;
       padding: 5px 12px 5px 17px;
       position: absolute;
-      z-index: 1;
+      text-align: center;
       top: 25px;
-      left: -10px;
+      width: 102px;
+      z-index: 1;
     }
     .timeAlert2 {
       background: $warning-color;
       border-radius: 0px 8px 8px 0px;
       color: $third-text-color;
-      font: 12px "Open Sans", sans-serif;
       font-weight: 700;
-      width: 102px;
-      text-align: center;
+      font: 12px "Open Sans", sans-serif;
+      left: -10px;
       padding: 5px 12px 5px 17px;
       position: absolute;
+      text-align: center;
       top: 25px;
-      left: -10px;
+      width: 102px;
     }
     img {
       margin-top: 1px;
@@ -241,11 +241,11 @@ header {
     }
     .delayedTask {
       p {
-        height: 48px;
+        height: 50px;
       }
     }
     .noTime {
-      margin-bottom: 25px;
+      margin-bottom: 24px;
     }
     .extraButtons {
       display: flex;
@@ -254,14 +254,14 @@ header {
       margin-top: 40px;
 
       button {
-        border: 0px;
         border-radius: 8px;
+        border: 0px;
+        color: $third-text-color;
+        cursor: pointer;
+        font-weight: 700;
+        font: 16px "Open Sans", sans-serif;
         height: 40px;
         text-align: center;
-        color: $third-text-color;
-        font: 16px "Open Sans", sans-serif;
-        font-weight: 700;
-        cursor: pointer;
 
         &:first-child {
           background-color: $main-color;
@@ -283,19 +283,19 @@ header {
 }
 
 .seeMore {
+  align-items: center;
   background-color: #6e4b87;
-  border: 0;
   border-radius: 8px;
+  border: 0;
   color: $third-text-color;
   cursor: pointer;
   display: flex;
-  font: 16px "Open Sans", sans-serif;
   font-weight: 700;
-  margin: 0 auto;
-  justify-content: center;
-  align-items: center;
-  width: 197px;
+  font: 16px "Open Sans", sans-serif;
   height: 38px;
+  justify-content: center;
+  margin: 0 auto;
+  width: 197px;
 }
 
 .newsletter {
@@ -316,12 +316,12 @@ header {
   }
 
   form {
+    align-items:flex-end;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 0 auto;
     justify-content: space-between;
-    align-items: end;
+    margin: 0 auto;
     padding: 1%;
 
     label {
@@ -357,30 +357,30 @@ header {
   flex-wrap: wrap;
   gap: 54px;
   justify-content: center;
-  margin-top: 107px;
   margin-bottom: 100px;
+  margin-top: 107px;
 
   article {
     width: 60%;
 
     p {
-      text-align: start;
-      font: 14px "Open Sans", sans-serif;
-      font-weight: 400;
       color: $secondary-text-color;
-      margin: 10px;
+      font-weight: 400;
+      font: 14px "Open Sans", sans-serif;
       line-height: 19px;
+      margin: 10px;
+      text-align: start;
     }
   }
 }
 
 footer {
-  display: flex;
   align-items: center;
-  justify-content: center;
   background-color: $main-color;
-  width: 100%;
+  display: flex;
   height: 20vh;
+  justify-content: center;
+  width: 100%;
 
   div {
     p {
@@ -395,6 +395,7 @@ footer {
     background-color: $main-color;
     clip-path: polygon(0 0, 100% 0, 100% 63%, 0 53%);
     height: 360px;
+
     nav {
       display: flex;
       justify-content: center;
@@ -409,15 +410,17 @@ footer {
   .hiddenDisclaimer {
     color: $main-color;
     display: block;
-    margin: 0 auto;
-    margin-top: -120px;
-    font: 16px "Open Sans", sans-serif;
     font-weight: 400;
+    font: 16px "Open Sans", sans-serif;
+    margin: 0 auto;
     text-align: center;
     width: 272px;
+
+    position: relative;
+    top: -100px;
   }
   .taskFilter {
-    margin-top: 45px;
+    margin-top: -50px;
     width: 95%;
     height: 146px;
 
@@ -434,16 +437,16 @@ footer {
   }
   .taskTable {
     display: grid;
-    grid-template-columns: 95vw;
     gap: 24px;
+    grid-template-columns: 95vw;
     margin-top: 37px;
 
     .taskCard {
       align-items: center;
-      width: 100%;
-      height: 210px;
       display: flex;
       flex-direction: row;
+      height: 210px;
+      width: 100%;
 
 
       &:nth-child(n + 5):nth-child(-n + 8){
@@ -462,8 +465,8 @@ footer {
         }
       }
       .conclusionBtn {
-        display: block;
         cursor: pointer;
+        display: block;
       }
       .extraButtons {
         display: none;
@@ -475,9 +478,9 @@ footer {
         height: 100%;
 
         img {
-          width: 120px;
-          object-fit: cover;
           margin-top: 0;
+          object-fit: cover;
+          width: 120px;
         }
       }
       article {
